--- a/Server/bin/ServerUploadFoto.ini
+++ b/Server/bin/ServerUploadFoto.ini
@@ -1,6 +1,6 @@
 [Database]
 DriverID=FB
-Database=C:\Atron Projetos\ExemploUploadFotoHorse\Server\bin\UPLOADFOTO.FDB
+Database=C:\Atron Projetos\ExemploUploadFoto\Server\bin\UPLOADFOTO.FDB
 User_name=sysdba
 Password=masterkey
 Port=3050
