--- a/Server/bin/ServerFile.ini
+++ b/Server/bin/ServerFile.ini
@@ -1,6 +1,6 @@
 [Database]
 DriverID=FB
-Database=C:\Atron Projetos\ExemploUploadFoto\Server\bin\UPLOADFOTO.FDB
+Database=C:\Atron Projetos\ExemploUploadFotoPicture\Server\bin\UPLOADARQUIVO.FDB
 User_name=sysdba
 Password=masterkey
 Port=3050
